--- a/main.ipynb
+++ b/main.ipynb
@@ -18,7 +18,7 @@
     "if 'google.colab' in sys.modules: # if we are in colab, install wandb, clone the repo and cd to lesson1 directory\n",
     "    !git clone https://github.com/HectorLob/EUCLID-hyperelasticity.git\n",
     "    %cd /content/EUCLID-hyperelasticity\n",
-    "    !pip install -r /path/to/requirements.txt"
+    "    !pip install -r requirements.txt"
    ]
   },
   {
